terraform/aws/production/ap-southeast-1/docker/ecs/security-group.tf
resource "aws_security_group" "service_security_group" {
  vpc_id = data.terraform_remote_state.vpc_database.outputs.vpc_id

  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.load_balancer_security_group.id]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "${local.app_name}-service-sg"
    Environment = local.environment
  }
}

resource "aws_security_group" "load_balancer_security_group" {
  vpc_id = data.terraform_remote_state.vpc_database.outputs.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }
  tags = {
    Name        = "${local.app_name}-sg"
    Environment = local.environment
  }
}
